# mastercard_challenge

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
mastercard_challenge/: __init__.py  dataset.py  features.py  plots.py
mastercard_challenge/modeling/: predict.py  train.py
mastercard_challenge/visualization/: visualize.py
notebooks/: 1.0-pk-transactions-eda.ipynb  1.1-pk-transactions-geo-analysis.ipynb  1.2-pk-geo-analysis.ipynb  1.2-pk-users-eda.ipynb  1.3-pk-merchants-eda.ipynb  2.0-pk-feature-engineering.ipynb
tests/: mc_model.py  mc_model_one_file.py  mc_model_one_file_fraud.py
