[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mastercard_challenge"
version = "0.0.1"
description = "\"SGH x Mastercard Hackathon - May 2025\""
authors = [
  { name = "Azeno" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "jupyterlab>=4.4.2",
    "loguru",
    "matplotlib>=3.10.3",
    "mkdocs",
    "notebook>=7.4.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pip",
    "plotly>=6.1.0",
    "pyarrow>=20.0.0",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm",
    "typer",
    "xgboost>=3.0.1",
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["mastercard_challenge"]
include = ["pyproject.toml", "mastercard_challenge/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mastercard_challenge"]
force-sort-within-sections = true

